2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Xml.Formatting:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.Xml.Formatting/XmlChar.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatter.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatterWriter.cs:
	* MonoDevelop.Xml.Formatting/XmlFormattingPolicy.cs: Added a
	  more advanced xml formatter, which is not yet being used.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	  Track API changes.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs: Track API changes.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	  Implemented 'Bug 537682 - It would be great if I could just
	  type bar '/' to close any tag as <foo />...'.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Track api
	  changes.

2009-07-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs: Don't crash when
	  trying to format malformed xml.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Use the new
	  DesktopService instead of PlatformService.

2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/XmlFormatter.cs: Implemented a simple